# iroh-gossip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: ci.yaml  cleanup.yaml  docs.yaml  flaky.yaml  release.yaml  simulation.yaml  tests.yaml
examples/: chat.rs  memory-peak.rs  setup.rs
pr/1/docs/: search-index.js
pr/102/docs/sim/: enum.Simulation.html  fn.run_and_save_simulation.html
pr/104/docs/sim/: fn.compare_files.html
pr/106/docs/: search-index.js
pr/106/docs/iroh_gossip/: constant.ALPN.html
pr/106/docs/sim/: struct.BigMulti.html
pr/107/docs/iroh_gossip/: all.html  constant.ALPN.html  index.html
pr/107/docs/search.index/: 02032197c0d0.js  04e4e0cba123.js  05ce2578fd87.js  0a709725f166.js  0ecedb76e784.js  1108819e3351.js  13546741d9aa.js  15857353ef72.js  176c72e83df9.js  19f36e77441a.js  1adbdf7c061d.js  1d4084ec88f2.js  26e1628b7875.js  26fd9ff1a5e4.js  2ec8cf20a2f0.js  2fefcac0c537.js  30970dcf67f8.js  3223ba4c4119.js  358294f807de.js  35da7662aac3.js  37e7d8525972.js  3a3576c02010.js  432f7c251ed4.js  45d7e8ee83ce.js  466151490167.js  4a647668db25.js  4b3547040e08.js  507eb1b69461.js  51a09426cec6.js  51b9ada2b49c.js  5afc83238b8d.js  5b3f3057dd7f.js  6060ff2530ea.js  61a906f0c556.js  622caa400b2a.js  63e1418b04ea.js  662bf44bf570.js  68d7488c8cee.js  6bf1cbde7e1c.js  6dc421a2488a.js  (+4 more)
pr/107/docs/sim/: all.html  enum.Command.html  enum.Simulation.html  enum.SimulationError.html  fn.compare_dirs.html  fn.compare_files.html  fn.compare_results.html  fn.fmt_diff_round.html  fn.fmt_percent.html  fn.fmt_round.html  fn.main.html  fn.print_result.html  fn.run_and_save_simulation.html  fn.run_simulation.html  index.html  struct.BigAll.html  struct.BigMulti.html  struct.BigSingle.html  struct.Cli.html  struct.FailedToBootstrapSnafu.html  struct.ScenarioDescription.html  struct.SimConfig.html  struct.SimulationResults.html  trait.Scenario.html
pr/108/docs/: src-files.js
pr/108/docs/iroh_gossip/: all.html  constant.ALPN.html
pr/108/docs/search.index/: 0023d2bd95d6.js  00f05909e91b.js  06f754f5df9c.js  07037ae5cbdb.js  07787a4d9db9.js  09064454d60d.js  090fbdd632c1.js  12a29edc6436.js  15cb7b6677e9.js  1a8a8edd29df.js  2252dc4c6974.js  23095c934340.js  2a0215f1aaad.js  2beaf465f2c9.js  2f6e531c92fa.js  30aeb5eca9c2.js  327470c6fa57.js  34582543f439.js  37a921a4ab51.js  3db0a60a2336.js  49c549c18d6d.js  4b9e12a9a6e2.js  5400b42ec05f.js  542d8ebb3766.js  54e32bf29be5.js  589e3715c3e3.js  5a2007342384.js  60a6664fa374.js  65084875d25d.js  67b3e6df7f30.js  6d905db28bcc.js  6eb5639fbb17.js  701c9c0744be.js  7065917c9d7f.js  73b48add6160.js  761768f08bdb.js  7c16d44a6dcb.js  root.js
pr/108/docs/sim/: all.html  enum.Simulation.html  fn.compare_files.html  fn.fmt_percent.html  struct.BigAll.html  struct.ScenarioDescription.html  struct.SimulationResults.html  trait.Scenario.html
pr/11/docs/: search-index.js
pr/11/docs/iroh_gossip/: sidebar-items.js
pr/110/docs/iroh_gossip/: index.html
pr/110/docs/search.index/: 039c9bb16b0f.js  05276e7caf12.js  0624f8a9a368.js  066cb00a719a.js  087ff293f4f2.js  096002b39ce5.js  (+120 more)
pr/111/docs/: settings.html
pr/12/docs/: search-index.js
pr/126/docs/: crates.js
pr/13/docs/: crates.js  search-index.js
pr/130/docs/: help.html
pr/132/docs/: src-files.js
pr/14/docs/: search-index.js
pr/15/docs/: search-index.js
pr/16/docs/: search-index.js
pr/17/docs/: search-index.js
pr/2/docs/: search-index.js
pr/20/docs/: search-index.js
pr/21/docs/: search-index.js
pr/24/docs/: src-files.js
pr/25/docs/: search-index.js
pr/26/docs/: search-index.js
pr/3/docs/: search-index.js  src-files.js
pr/34/docs/: search-index.js
pr/35/docs/: search-index.js
pr/38/docs/: crates.js  search-index.js
pr/4/docs/: search-index.js  src-files.js
pr/41/docs/: help.html
pr/44/docs/: search-index.js
pr/49/docs/: search-index.js
pr/50/docs/: search-index.js
pr/51/docs/: search-index.js  src-files.js
pr/52/docs/: help.html  search-index.js
pr/53/docs/: search-index.js  src-files.js
pr/57/docs/: search-index.js  src-files.js
pr/58/docs/: search-index.js
pr/6/docs/: search-index.js
pr/62/docs/: search-index.js  settings.html
pr/63/docs/: search-index.js
pr/64/docs/: search-index.js
pr/65/docs/: search-index.js
pr/67/docs/: search-index.js  src-files.js
pr/7/docs/: search-index.js
pr/72/docs/: search-index.js
pr/73/docs/: search-index.js
pr/74/docs/: crates.js  search-index.js  src-files.js
pr/75/docs/: search-index.js
pr/76/docs/: search-index.js  src-files.js
pr/77/docs/: search-index.js
pr/8/docs/: search-index.js
pr/82/docs/: search-index.js
pr/83/docs/: search-index.js
pr/89/docs/: search-index.js
pr/9/docs/: search-index.js  src-files.js
pr/92/docs/: search-index.js
pr/93/docs/: settings.html
pr/97/docs/: help.html  settings.html  src-files.js
sim-frontend/: README.md  TODO.md  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
sim-frontend/src/: app.tsx  config.tsx  graph.tsx  index.css  runner.tsx
sim-frontend/wasm/: Cargo.toml
sim-frontend/wasm/src/: lib.rs
simulations/: all.toml
src/: api.rs  cli.rs  conn_manager.rs  lib.rs  metrics.rs  net.rs  proto.rs  rpc.rs
src/net/: address_lookup.rs  connection_pool.rs  connections.rs  dialer.rs  discovery.rs  handles.rs  net_proto.rs  peer_manager.rs  rpc.rs  topic.rs  util.rs
src/proto/: hyparview.rs  plumtree.rs  sim.rs  state.rs  tests.rs  topic.rs  util.rs
src/rpc/: client.rs  mod.rs  proto.rs
tests/: sim.rs
vis/: index.html
vis/assets/: gossip_sim_wasm_bg-Bt8RWnX7.wasm  index-BXEdhrEk.js  index-C7NpWaKv.css  index-DTB9jfcG.js
vis/data/: GossipMulti-n100-r30.config.toml  GossipMulti-n100-r30.events.0.csv  GossipMulti-n100-r30.events.1.csv  GossipMulti-n100-r30.events.123.csv  GossipMulti-n100-r30.events.212312388123.csv  GossipMulti-n100-r30.latencies.0.csv  GossipMulti-n100-r30.latencies.1.csv  GossipMulti-n100-r30.latencies.123.csv  GossipMulti-n100-r30.latencies.212312388123.csv  GossipMulti-n100-r30.results.json
(+5370 files in other folders)
